--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -45,7 +45,7 @@
     <div class="col-md-3 mb-4" *ngFor='let charity of charitiesDisplay'>
       <div class="card mt-4">
         <a  [routerLink]="['/donation/'+charity.id]">        
-          <img src="https://donationapp254.herokuapp.com{{ charity.charity_image }}" class="card-img-top" alt="{{charity.location}}">
+          <img src="https://donationapp254.herokuapp.com{{ charity.charity_image }}" class="card-img-top" alt="{{charity.location}}" style="height: 30vh;">
         </a>
         
      
