--- a/src/app/workview/workview.component.html
+++ b/src/app/workview/workview.component.html
@@ -8,7 +8,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4" *ngFor="let work of allworks">
             <div class="mywork">
                 
-                    <img style="width: 100%;" src="http://donationapp254.herokuapp.com{{work.user_image}}" alt="{{work.title}}">
+                    <img style="width: 100%;" src="https://res.cloudinary.com{{work.user_image}}" alt="{{work.title}}">
               
 
                     <p  class="text-white">{{work.description}}</p>
@@ -47,7 +47,7 @@
                             </div>
                             <div class="form-group text-dark">
                                 <select formControlName="charity">
-                                    <option *ngFor="let work of allworks" [ngValue]="work.id">{{work.charity.users.user_name}}</option>
+                                    <option *ngFor="let work of allworks" >{{work.charity.users.user_name}}</option>
 
                                 </select>
                                 <!-- <input type="hidden" [(ngModel)]="beneficiary.charity" value="jitegemee"> -->
