--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,18 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-steel">
     
-    <div class="container  border-bottom">
-      <a class="navbar-brand mr-5" routerLink="">
-        <h4 class="logo fw-bolder">
+    <div class="container">
+      <a class="mr-5 h2" routerLink="">
+        <p class="logo fw-bolder text-secondary">
           Dona
-        </h4>
+        </p>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarToggle">            
-        <div class="navbar-nav mr-auto font-weight-light">
-          <a class="nav-item nav-link mr-5" routerLink="">
+        <div class="navbar-nav mr-auto h4 font-weight-light">
+          <a class="nav-item nav-link mr-5 " routerLink="">
             Gift Catalogue 
           </a>
           <a class="nav-item nav-link mr-5" routerLink="work">
@@ -29,7 +29,7 @@
 
 
         <!-- Navbar Right Side section -->
-        <div class="navbar-nav font-weight-light">    
+        <div class="navbar-nav font-weight-light h4">    
             
           <a class="nav-item nav-link" routerLink="login">
             Register/Login
