--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -95,14 +95,14 @@
           </div>
 
         </div>
-        <div class="row d-flex justify-content-center pt-1">
+        <!-- <div class="row d-flex justify-content-center pt-1">
           <h5>
             Or
           </h5>
         </div>
         <div class="row d-flex justify-content-center pt-1">
           <button type="submit" class="floating btn btn-warning ml-3 mb-3" routerLink="donation">CHECKOUT ANONYMOUSLY</button>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
