--- a/src/app/workview/workview.component.html
+++ b/src/app/workview/workview.component.html
@@ -8,10 +8,10 @@
         <div class="col-xs-4 col-sm-4 col-md-4" *ngFor="let work of allworks">
             <div class="mywork">
 
-                    <img style="width: 100%;" src="https://res.cloudinary.com/gracemwende/{{work.user_image}}" alt="{{work.title}}">
+                    <img style="width: 100%; height:24vh" src="https://res.cloudinary.com/gracemwende/{{work.user_image}}" alt="{{work.title}}">
               
 
-                    <p  class="text-white">{{work.description}}</p>
+                    <p  class="text-white" style="font-size: 1.5rem; font-family: 'Noto Serif', serif;">{{work.description}}</p>
 
                     <!-- <select>
                         <option *ngFor="let work of allworks" [value]="work">{{work}}</option>
