Add the donation posting function

--- a/src/app/donationview/donationview.component.css
+++ b/src/app/donationview/donationview.component.css
@@ -23,6 +23,10 @@
   margin: 1rem;
 }
 
+input::-webkit-inner-spin-button, input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 
 
 
