--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -17,7 +17,7 @@
         <div class="input-group-prepend">
           <div class="input-group-text">$</div>
         </div>
-        <input type="number" [(ngModel)]="finalAmount" #amount class="form-control" id="amount" placeholder="50">
+        <input type="number" [(ngModel)]="finalAmount" [(ngModel)]="sent.amount" #amount class="form-control" id="amount" placeholder="50">
         <div class="input-group-append">
           <select #frequency class="custom-select" id="selection" required>
             <option selected disabled hidden value="">Giving frequency</option>
@@ -90,10 +90,9 @@
         </div>
         <div class="row d-flex justify-content-center pt-3">
           
-          <div class="btn-lg-lg" id="myPaypalButtons">
+          <div class="btn-lg-lg" id="myPaypalButtons" (click)="donation()">
             <!-- <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation"> PAYPAL <i class="bi bi-paypal"></i></button> -->
           </div>
-
         </div>
         <!-- <div class="row d-flex justify-content-center pt-1">
           <h5>
