Modify the donating function

--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -90,9 +90,11 @@
         </div>
         <div class="row d-flex justify-content-center pt-3">
           
-          <div class="btn-lg-lg" id="myPaypalButtons" (click)="donation()">
-            <!-- <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation"> PAYPAL <i class="bi bi-paypal"></i></button> -->
-          </div>
+          <a href="" (click)="donating()">
+            <div class="btn-lg-lg" id="myPaypalButtons">
+              <!-- <button type="submit" class="floating btn btn-warning ml-3 mb-3 btn-lg" routerLink="donation"> PAYPAL <i class="bi bi-paypal"></i></button> -->
+            </div>
+          </a>
         </div>
         <!-- <div class="row d-flex justify-content-center pt-1">
           <h5>
