--- a/src/app/aboutview/aboutview.component.css
+++ b/src/app/aboutview/aboutview.component.css
@@ -26,3 +26,8 @@ font-family: 'Times New Roman', Times, serif;
     position: relative;
     top: 300px;
 }
+
+#myselect{
+    height:5vh;
+    width:100%
+}
