add default image

--- a/src/app/workview/workview.component.html
+++ b/src/app/workview/workview.component.html
@@ -8,7 +8,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4" *ngFor="let work of allworks">
             <div class="mywork">
                 
-                    <img style="width: 100%;" src="https://res.cloudinary.com/gracemwende/{{work.user_image}}" alt="{{work.title}}">
+                    <img style="width: 100%;" src="https://res.cloudinary.com/gracemwende/{{work.user_image}}" alt="{{work.title}}" (error) ="changeSource($event)">
               
 
                     <p  class="text-white">{{work.description}}</p>
@@ -63,7 +63,7 @@
                             <div class="row">
                                 <div class="col-xs-4 col-sm-4 col-md-4">
                                     <div class="form-group">
-                                    <button type="submit"  class="btn btn-warning" (click)="workRedirect('/work')">Add Beneficiary</button>
+                                    <button type="submit"  class="btn btn-warning" (click)="workRedirect('/work')" >Add Beneficiary</button>
                                     </div>
                                 </div>
                                 <div class="col-xs-5 col-sm-5 col-md-5"></div>
