--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ html { height: 100%; }
 body { 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
   color: #fff;
-  background-color: #2F2F2F;
+  background-color: #03010c;
   /* margin-top: 3.96rem; */
 }
 
