home education part

--- a/src/app/homeview/homeview.component.css
+++ b/src/app/homeview/homeview.component.css
@@ -57,6 +57,9 @@
   padding-right: 1.3em;
   border-radius: 12px;
 }
+.education-head{
+  color:#03010c;
+}
 
 .card-body {
   background-color: #2F2F2F;
