--- a/src/app/homeview/homeview.component.html
+++ b/src/app/homeview/homeview.component.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h1>
+          <h1 class="education-head">
             Education
           </h1>
           <p>
