--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
 <footer class="mt-5">
 
-  <div class="container bottom text-center border-top">
+  <div class="container bottom text-center">
     <div class="mt-2em">
       
       <div class="row">
