--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ html { height: 100%; }
 body { 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
   color: #fff;
-  background-color: #03010c;
+  background-color: #0e0d0d;
   /* margin-top: 3.96rem; */
 }
 
