--- a/src/app/loginview/loginview.component.html
+++ b/src/app/loginview/loginview.component.html
@@ -1,29 +1,34 @@
 <div class="container login">
-    <div id="form" class="card-body login-card-body mt-0 "  autocomplete="off">
-        <h1 class=" text-center mb-4 fw-normal">User Login</h1>
-          <div class="form-group">
-            <div class="">
-              <label for="">Email *</label>
-            <input type="email" [(ngModel)]="input.username" class="form-control" placeholder = "example@gmail.com" required><br>
-    
-          </div>
-          </div>
-    
-          <div class="form-group">
-            <div class="">
-              <label for="">Password *</label>
-            <input type="password"  [(ngModel)]="input.password" class="form-control" placeholder="Password" required><br>
-    
-          </div>
-          </div> 
-        
-          <div class="form-group">   
+  <form id="form"  name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
 
-                <input type="submit" (click)="onLogin()"  class="form-control btn btn-warning" value="SIGN IN"><br>
-          </div>
-          <p class=" mt-4">Don't have a Dona account?
-         
-            <a routerLink="/register" class="text-primary" style="text-decoration: underline;"> Register here</a>
-          </p>
-    </div>
+      <h1 class=" text-center mb-4 fw-normal mt-4">User Login</h1>
+        <div class="form-group">
+          <div class="">
+            <label for="">Email *</label>
+
+            <input type="email" class="form-control" name="username" [(ngModel)]="form.username"  placeholder="example@gmail.com" required/>
+  
+        </div>
+        </div>
+  
+        <div class="form-group">
+          <div class="">
+            <label for="">Password *</label>
+
+            <input type="password" class="form-control" name="password" [(ngModel)]="form.password" placeholder="Password" required minlength="8" #password="ngModel"/>
+  
+        </div>
+        </div> 
+   
+        <div class="form-group pt-3">   
+
+              <input type="submit"  class="form-control btn btn-warning" value="SIGN IN"><br>
+        </div>
+        <p class=" mt-4">Don't have a Dona account?
+       
+          <a routerLink="/register" class="text-primary" style="text-decoration: underline;"> Register here</a>
+        </p>
+
+  </form>
+
 </div>
