redirect on successful login

--- a/src/app/aboutview/aboutview.component.html
+++ b/src/app/aboutview/aboutview.component.html
@@ -40,7 +40,7 @@
     <div class="row pt-2">
 
         <div class=" col-md-3">
-            <div style="border:1px solid #ddd;padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
+            <div style="padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
                 <div class="pl-5">
                 <a href="" target="_self" ><img  style="border-radius:100px" width="150" height="150" data-src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" data-was-processed="true"></a>
               
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="col-md-3">
-             <div style="border:1px solid #ddd;padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
+             <div style="padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
                 <div class="pl-5">
                 <a href="" target="_self" ><img  style="border-radius:100px;margin:auto;" width="150" height="150" data-src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" data-was-processed="true"></a>
               
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="col-md-3">
-             <div style="border:1px solid #ddd;padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
+             <div style="padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
                 <div class="pl-5">
                 <a href="" target="_self" ><img  style="border-radius:100px;margin:auto;" width="150" height="150" data-src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" data-was-processed="true"></a>
               
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="col-md-3">
-             <div style="border:1px solid #ddd;padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
+             <div style="padding:10px; border-radius: 10px;" class="tile-column top-col wpb_column vc_column_container vc_col-sm-6 vc_col-lg-3 vc_col-md-offset-0 vc_col-md-6 vc_col-xs-12 vc_col-has-fill"><div class="vc_column-inner vc_custom_1622673711989"><div class="wpb_wrapper">
                 <div class="pl-5">
                 <a href="" target="_self" ><img  style="border-radius:100px;margin:auto;" width="150" height="150" data-src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg" data-was-processed="true"></a>
               
