--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -46,7 +46,7 @@
           </button>
           
           <div class="dropdown-menu bg-secondary">
-            <a class="nav-item nav-link mr-5 text-white" style="cursor:pointer;" (click)="logout()" >
+            <a class="nav-item nav-link text-white  text-center" style="cursor:pointer;" (click)="logout()" >
               LogOut
             </a> 
           </div>
