--- a/src/app/workview/workview.component.html
+++ b/src/app/workview/workview.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="col-xs-5 col-sm-5 col-md-5 "></div>
-        <div class="col-xs-2 col-sm-2 col-md-2 ">
+        <div class="col-xs-2 col-sm-2 col-md-2 " *ngIf="charity_role">
             <a href="" data-toggle="modal" data-target="#add_story1" class="btn btn-warning mt-1 px-4" >ADD STORY</a>
         
         </div>
