--- a/src/app/workview/workview.component.html
+++ b/src/app/workview/workview.component.html
@@ -6,12 +6,12 @@
 
     <div class="row data mt-3">
         <div class="col-xs-4 col-sm-4 col-md-4" *ngFor="let work of allworks">
-            <div class="mywork">
+            <div class="mywork mt-3">
 
                     <img style="width: 100%; height:24vh" src="https://res.cloudinary.com/gracemwende/{{work.user_image}}" alt="{{work.title}}">
               
 
-                    <p  class="text-white" style="font-size: 1.5rem; font-family: 'Noto Serif', serif;">{{work.description}}</p>
+                    <p  class="text-black" style="font-size: 1.5rem; font-family: 'Noto Serif', serif;">{{work.description}}</p>
 
                     <!-- <select>
                         <option *ngFor="let work of allworks" [value]="work">{{work}}</option>
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="col-xs-5 col-sm-5 col-md-5 "></div>
         <div class="col-xs-2 col-sm-2 col-md-2 ">
-            <a href="" data-toggle="modal" data-target="#add_story1" class="btn btn-warning mt-1 px-4" >ADD STORY</a>
+            <a href="" data-toggle="modal" data-target="#add_story1" class="btn btn-warning mt-3 px-4" >ADD STORY</a>
         
         </div>
         <div class="col-xs-5 col-sm-5 col-md-5 "></div>
