--- a/src/app/donationview/donationview.component.html
+++ b/src/app/donationview/donationview.component.html
@@ -54,7 +54,7 @@
       <div class="content">
         <div class="row">
           <div class="col-sm-4 pt-2">
-            <img src="../../assets/superhero.svg" alt="">
+            <img src="../../assets/Checkout.png" alt="">
           </div>
           <div class="col-sm-8 txtGroup">
             <h6 class="text-muted">
